26 February 2010: Wouter
	- Fixup prototype for lexer cleanup in daemon code.

24 February 2010: Wouter
	- Fix scrubber bug that potentially let NS records through.  Reported
	  by Amanda Constant.
	- Also delete potential poison references from additional.
	- Fix: no classification of a forwarder as lame, throwaway instead.

23 February 2010: Wouter
	- libunbound ub_ctx_get_option() added.
	- unbound-control set_option and get_option commands.
	- iana portlist updated.

18 February 2010: Wouter
	- A little more strict DS scrubbing.
	- No more blacklisting of unresponsive servers, a 2 minute timeout
	  is backed off to.
	- RD flag not enabled for dnssec-blacklisted tries, unless necessary.
	- pickup ldns compile fix, libdl for libcrypto.
	- log 'tcp connect: connection timed out' only in high verbosity.
	- unbound-control log_reopen command.
	- moved get_option code from unbound-checkconf to util/config_file.c

17 February 2010: Wouter
	- Disregard DNSKEY from authority section for chain of trust.
	  DS records that are irrelevant to a referral scrubbed.  Anti-poison.
	- iana portlist updated.

16 February 2010: Wouter
	- Check for 'no space left on device' (or other errors) when 
	  writing updated autotrust anchors and print errno to log.

15 February 2010: Wouter
	- Fixed the requery protection, the TTL was 0, it is now 900 seconds,
	  hardcoded.  We made the choice to send out more conservatively,
	  protecting against an aggregate effect more than protecting a
	  single user (from their own folly, perhaps in case of misconfig).

12 February 2010: Wouter
	- Re-query pattern changed on validation failure.  To protect troubled
	  authority servers, unbound caches a failure for the DNSKEY or DS
	  records for the entire zone, and only retries that 900 seconds later.
	  This implies that only a handful of packets are sent extra to the
	  authority if the zone fails.

11 February 2010: Wouter
	- ldns tarball update for long label length syntax error fix.