@@ -86,6 +86,8 @@ usage()
 	printf("  dump_requestlist		show what is worked on\n");
 	printf("  set_option opt: val		set option to value, no reload\n");
 	printf("  get_option opt		get option value\n");
+	printf("  list_stubs			list stub-zones used\n");
+	printf("  list_forwards			list forward-zones used\n");
 	printf("  forward [off | addr ...]	without arg show forward setup\n");
 	printf("				or off to turn off root forwarding\n");
 	printf("				or give list of ip addresses\n");
