@@ -1,5 +1,6 @@
 26 February 2010: Wouter
 	- Fixup prototype for lexer cleanup in daemon code.
+	- unbound-control list_stubs and list_forwards.
 
 24 February 2010: Wouter
 	- Fix scrubber bug that potentially let NS records through.  Reported
